retrieveNA31/objects/Core_IPS_Environment_Variables__c.object
<CustomObject>
    <description>The master set of Env Details questions, defined per Support Org. At this point, Env Details questions are not linked to any Product or Subcat, nor is conditional display on Case configured via flags.</description>
    <fields>
        <fullName>Core_Answers__c</fullName>
        <label>Answers</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Core_Datatype__c</fullName>
        <label>Datatype</label>
        <picklist>
            <picklistValues>
                <fullName>picklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>text (255)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>textarea (5000)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>multi select</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Core_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Core_Product_Organization__c</fullName>
        <label>Core Product Organization</label>
        <referenceTo>Core_IPS_Product_Organization__c</referenceTo>
        <relationshipName>Environmental_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Core_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Core_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Environmental Detail Master</label>
    <nameField>
        <label>Environment Variables Question</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Environmental Details Master</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Core_IPS_Env_Dtls_Master_Ans_No_Blanks</fullName>
        <active>true</active>
        <description>Ensures that when a datatype of Picklist or Multi Select is selected, there must be at least one row of text in the Answer text box.</description>
        <errorConditionFormula>AND
(OR(
ISPICKVAL(Core_Datatype__c, &apos;picklist&apos;), ISPICKVAL(Core_Datatype__c, &apos;multi select&apos;)
),
 ISBLANK(Core_Answers__c) 
)</errorConditionFormula>
        <errorDisplayField>Core_Answers__c</errorDisplayField>
        <errorMessage>Enter at least 1 row of text when Datatype is &apos;Picklist&apos; or &apos;Multi Select&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Core_IPS_Env_Dtls_Master_Choose_DataType</fullName>
        <active>false</active>
        <description>Ensure the DataType field cannot be blank. Input is mandatory.</description>
        <errorConditionFormula>ISBLANK (TEXT(Core_Datatype__c))</errorConditionFormula>
        <errorDisplayField>Core_Datatype__c</errorDisplayField>
        <errorMessage>Datatype must be specified.</errorMessage>
    </validationRules>
</CustomObject>